[gd_scene load_steps=14 format=2]

[ext_resource path="res://ui/button_theme.tres" type="Theme" id=1]
[ext_resource path="res://ui/MainMenu.gd" type="Script" id=2]
[ext_resource path="res://assets/menu_background.png" type="Texture" id=3]
[ext_resource path="res://assets/menu_yeerk.png" type="Texture" id=4]
[ext_resource path="res://ui/Menu.tscn" type="PackedScene" id=5]
[ext_resource path="res://ui/OptionsMenu.gd" type="Script" id=6]
[ext_resource path="res://ui/LanguageOptions.gd" type="Script" id=7]
[ext_resource path="res://assets/DS_Moster.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://ui/ControlsOptions.gd" type="Script" id=9]
[ext_resource path="res://assets/yeerks_font.res" type="DynamicFont" id=10]
[ext_resource path="res://assets/back_button.png" type="Texture" id=11]
[ext_resource path="res://assets/back_button_1.png" type="Texture" id=12]

[sub_resource type="DynamicFont" id=1]
size = 51
outline_size = 4
outline_color = Color( 0.141176, 0.329412, 0.427451, 1 )
font_data = ExtResource( 8 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="YeerkFace" type="TextureRect" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -615.0
margin_top = -360.0
margin_right = 409.0
margin_bottom = 240.0
rect_scale = Vector2( 0.6, 0.6 )
mouse_filter = 2
texture = ExtResource( 4 )
flip_h = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenu" parent="." instance=ExtResource( 5 )]
margin_left = 60.0
margin_top = 128.0
margin_right = -644.0
custom_constants/separation = 20

[node name="StartButton" type="Button" parent="MainMenu"]
margin_right = 320.0
margin_bottom = 96.0
rect_min_size = Vector2( 0, 96 )
theme = ExtResource( 1 )
text = "Старт"

[node name="PickLevelButton" type="Button" parent="MainMenu"]
margin_top = 116.0
margin_right = 320.0
margin_bottom = 212.0
rect_min_size = Vector2( 0, 96 )
theme = ExtResource( 1 )
text = "Обрати рівень"

[node name="SettingsButton" type="Button" parent="MainMenu"]
margin_top = 232.0
margin_right = 320.0
margin_bottom = 328.0
rect_min_size = Vector2( 0, 96 )
theme = ExtResource( 1 )
text = "Налаштування"

[node name="ExitButton" type="Button" parent="MainMenu"]
margin_top = 348.0
margin_right = 320.0
margin_bottom = 444.0
rect_min_size = Vector2( 0, 96 )
theme = ExtResource( 1 )
text = "Вийти з гри"

[node name="LevelMenu" parent="." instance=ExtResource( 5 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -321.0
margin_top = 32.0
margin_right = -1.0
margin_bottom = 388.0
grow_horizontal = 0
custom_constants/separation = 20
shown = false

[node name="BackToMain" type="Button" parent="LevelMenu"]
margin_right = 320.0
margin_bottom = 76.0
icon = ExtResource( 12 )
flat = true

[node name="TestLevel" type="Button" parent="LevelMenu"]
margin_top = 96.0
margin_right = 320.0
margin_bottom = 192.0
rect_min_size = Vector2( 0, 96 )
theme = ExtResource( 1 )
text = "Тестовий"

[node name="Level1" type="Button" parent="LevelMenu"]
margin_top = 212.0
margin_right = 320.0
margin_bottom = 308.0
rect_min_size = Vector2( 0, 96 )
theme = ExtResource( 1 )
text = "1: Табір"

[node name="Level2Mine" type="Button" parent="LevelMenu"]
margin_top = 328.0
margin_right = 320.0
margin_bottom = 424.0
rect_min_size = Vector2( 0, 96 )
theme = ExtResource( 1 )
text = "2: Штольня"

[node name="OptionsMenu" parent="." instance=ExtResource( 5 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -446.0
margin_top = 32.0
margin_right = 1.0
margin_bottom = 504.0
grow_horizontal = 0
custom_constants/separation = 20
script = ExtResource( 6 )
shown = false

[node name="BackToMain" type="Button" parent="OptionsMenu"]
margin_right = 447.0
margin_bottom = 76.0
icon = ExtResource( 11 )
flat = true

[node name="Fullscreen" type="Button" parent="OptionsMenu"]
margin_top = 96.0
margin_right = 447.0
margin_bottom = 192.0
rect_min_size = Vector2( 0, 96 )
theme = ExtResource( 1 )
text = "На весь екран: Ні"

[node name="Language" type="Button" parent="OptionsMenu"]
margin_top = 212.0
margin_right = 447.0
margin_bottom = 308.0
rect_min_size = Vector2( 0, 96 )
theme = ExtResource( 1 )
text = "Мова:"

[node name="Audio" type="Button" parent="OptionsMenu"]
margin_top = 328.0
margin_right = 447.0
margin_bottom = 424.0
rect_min_size = Vector2( 0, 96 )
theme = ExtResource( 1 )
text = "Авдіо"

[node name="Controls" type="Button" parent="OptionsMenu"]
margin_top = 444.0
margin_right = 447.0
margin_bottom = 540.0
rect_min_size = Vector2( 0, 96 )
theme = ExtResource( 1 )
text = "Керування"

[node name="LanguageOptions" type="Panel" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -200.0
margin_right = 200.0
margin_bottom = 200.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="LanguageOptions"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -184.0
margin_top = -143.0
margin_right = 184.0
margin_bottom = 143.0
custom_constants/separation = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="LanguageOptions/VBoxContainer"]
margin_right = 368.0
margin_bottom = 76.0

[node name="ClosePopup" type="Button" parent="LanguageOptions/VBoxContainer/HBoxContainer"]
margin_right = 233.0
margin_bottom = 76.0
size_flags_horizontal = 3
icon = ExtResource( 11 )
flat = true

[node name="Label" type="Label" parent="LanguageOptions/VBoxContainer/HBoxContainer"]
margin_left = 237.0
margin_top = 7.0
margin_right = 368.0
margin_bottom = 69.0
custom_fonts/font = SubResource( 1 )
text = "Мова"
align = 1

[node name="English" type="Button" parent="LanguageOptions/VBoxContainer"]
margin_top = 92.0
margin_right = 368.0
margin_bottom = 188.0
rect_min_size = Vector2( 0, 96 )
theme = ExtResource( 1 )
text = "English"

[node name="Ukrainian" type="Button" parent="LanguageOptions/VBoxContainer"]
margin_top = 204.0
margin_right = 368.0
margin_bottom = 300.0
rect_min_size = Vector2( 0, 96 )
theme = ExtResource( 1 )
text = "Українська"

[node name="ControlsOptions" type="Panel" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -256.0
margin_top = -256.0
margin_right = 256.0
margin_bottom = 256.0
rect_min_size = Vector2( 512, 0 )
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="ControlsOptions"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 32
custom_constants/margin_left = 32
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="ControlsOptions/MarginContainer"]
margin_left = 32.0
margin_right = 480.0
margin_bottom = 512.0

[node name="Control" type="Control" parent="ControlsOptions/MarginContainer/VBoxContainer"]
margin_right = 448.0
margin_bottom = 16.0
rect_min_size = Vector2( 0, 16 )

[node name="HBoxContainer2" type="HBoxContainer" parent="ControlsOptions/MarginContainer/VBoxContainer"]
margin_top = 20.0
margin_right = 448.0
margin_bottom = 96.0

[node name="ClosePopup" type="Button" parent="ControlsOptions/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_right = 135.0
margin_bottom = 76.0
size_flags_horizontal = 3
icon = ExtResource( 11 )
flat = true

[node name="Label2" type="Label" parent="ControlsOptions/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 139.0
margin_top = 7.0
margin_right = 448.0
margin_bottom = 69.0
custom_fonts/font = SubResource( 1 )
text = "Керування"
align = 1

[node name="ScrollContainer" type="ScrollContainer" parent="ControlsOptions/MarginContainer/VBoxContainer"]
margin_top = 100.0
margin_right = 448.0
margin_bottom = 512.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="GridContainer" type="GridContainer" parent="ControlsOptions/MarginContainer/VBoxContainer/ScrollContainer"]
margin_right = 448.0
margin_bottom = 596.0
size_flags_horizontal = 3
columns = 2

[node name="LabelUp" type="Label" parent="ControlsOptions/MarginContainer/VBoxContainer/ScrollContainer/GridContainer"]
margin_top = 27.0
margin_right = 300.0
margin_bottom = 69.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 10 )
text = "Вгору"

[node name="Up" type="Button" parent="ControlsOptions/MarginContainer/VBoxContainer/ScrollContainer/GridContainer"]
margin_left = 304.0
margin_right = 436.0
margin_bottom = 96.0
rect_min_size = Vector2( 132, 96 )
theme = ExtResource( 1 )
text = "W"

[node name="LabelDown" type="Label" parent="ControlsOptions/MarginContainer/VBoxContainer/ScrollContainer/GridContainer"]
margin_top = 127.0
margin_right = 300.0
margin_bottom = 169.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 10 )
text = "Вниз"

[node name="Down" type="Button" parent="ControlsOptions/MarginContainer/VBoxContainer/ScrollContainer/GridContainer"]
margin_left = 304.0
margin_top = 100.0
margin_right = 436.0
margin_bottom = 196.0
rect_min_size = Vector2( 96, 96 )
theme = ExtResource( 1 )
text = "W"

[node name="LableLeft" type="Label" parent="ControlsOptions/MarginContainer/VBoxContainer/ScrollContainer/GridContainer"]
margin_top = 227.0
margin_right = 300.0
margin_bottom = 269.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 10 )
text = "Вліво"

[node name="Left" type="Button" parent="ControlsOptions/MarginContainer/VBoxContainer/ScrollContainer/GridContainer"]
margin_left = 304.0
margin_top = 200.0
margin_right = 436.0
margin_bottom = 296.0
rect_min_size = Vector2( 96, 96 )
theme = ExtResource( 1 )
text = "W"

[node name="LabelRight" type="Label" parent="ControlsOptions/MarginContainer/VBoxContainer/ScrollContainer/GridContainer"]
margin_top = 327.0
margin_right = 300.0
margin_bottom = 369.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 10 )
text = "Вправо"

[node name="Right" type="Button" parent="ControlsOptions/MarginContainer/VBoxContainer/ScrollContainer/GridContainer"]
margin_left = 304.0
margin_top = 300.0
margin_right = 436.0
margin_bottom = 396.0
rect_min_size = Vector2( 96, 96 )
theme = ExtResource( 1 )
text = "W"

[node name="LabelInteract" type="Label" parent="ControlsOptions/MarginContainer/VBoxContainer/ScrollContainer/GridContainer"]
margin_top = 427.0
margin_right = 300.0
margin_bottom = 469.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 10 )
text = "Взаємодія"

[node name="Interact" type="Button" parent="ControlsOptions/MarginContainer/VBoxContainer/ScrollContainer/GridContainer"]
margin_left = 304.0
margin_top = 400.0
margin_right = 436.0
margin_bottom = 496.0
rect_min_size = Vector2( 96, 96 )
theme = ExtResource( 1 )
text = "W"

[node name="LabelDash" type="Label" parent="ControlsOptions/MarginContainer/VBoxContainer/ScrollContainer/GridContainer"]
margin_top = 527.0
margin_right = 300.0
margin_bottom = 569.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 10 )
text = "Ривок"

[node name="Dash" type="Button" parent="ControlsOptions/MarginContainer/VBoxContainer/ScrollContainer/GridContainer"]
margin_left = 304.0
margin_top = 500.0
margin_right = 436.0
margin_bottom = 596.0
rect_min_size = Vector2( 96, 96 )
theme = ExtResource( 1 )
text = "W"
[connection signal="pressed" from="MainMenu/StartButton" to="." method="_on_Level1_pressed"]
[connection signal="pressed" from="MainMenu/PickLevelButton" to="." method="_on_PickLevelButton_pressed"]
[connection signal="pressed" from="MainMenu/SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="MainMenu/ExitButton" to="MainMenu" method="_on_ExitButton_pressed"]
[connection signal="pressed" from="LevelMenu/BackToMain" to="." method="_on_BackToMain_pressed"]
[connection signal="pressed" from="LevelMenu/TestLevel" to="." method="_on_TestLevel_pressed"]
[connection signal="pressed" from="LevelMenu/Level1" to="." method="_on_Level1_pressed"]
[connection signal="pressed" from="LevelMenu/Level2Mine" to="." method="_on_Level2Mine_pressed"]
[connection signal="pressed" from="OptionsMenu/BackToMain" to="." method="_on_BackToMain_pressed"]
[connection signal="pressed" from="OptionsMenu/Fullscreen" to="OptionsMenu" method="_on_Fullscreen_pressed"]
[connection signal="pressed" from="OptionsMenu/Language" to="." method="_on_Language_pressed"]
[connection signal="pressed" from="OptionsMenu/Audio" to="OptionsMenu" method="_on_Audio_pressed"]
[connection signal="pressed" from="OptionsMenu/Controls" to="." method="_on_Controls_pressed"]
[connection signal="language_changed" from="LanguageOptions" to="OptionsMenu" method="_on_LanguageOptions_language_changed"]
[connection signal="pressed" from="LanguageOptions/VBoxContainer/HBoxContainer/ClosePopup" to="LanguageOptions" method="_on_ClosePopup_pressed"]
[connection signal="pressed" from="LanguageOptions/VBoxContainer/English" to="LanguageOptions" method="_on_English_pressed"]
[connection signal="pressed" from="LanguageOptions/VBoxContainer/Ukrainian" to="LanguageOptions" method="_on_Ukrainian_pressed"]
[connection signal="controls_changed" from="ControlsOptions" to="." method="_on_ControlsOptions_controls_changed"]
[connection signal="pressed" from="ControlsOptions/MarginContainer/VBoxContainer/HBoxContainer2/ClosePopup" to="ControlsOptions" method="_on_ClosePopup_pressed"]
[connection signal="pressed" from="ControlsOptions/MarginContainer/VBoxContainer/ScrollContainer/GridContainer/Up" to="ControlsOptions" method="_on_English_pressed"]
[connection signal="pressed" from="ControlsOptions/MarginContainer/VBoxContainer/ScrollContainer/GridContainer/Down" to="ControlsOptions" method="_on_English_pressed"]
[connection signal="pressed" from="ControlsOptions/MarginContainer/VBoxContainer/ScrollContainer/GridContainer/Left" to="ControlsOptions" method="_on_English_pressed"]
[connection signal="pressed" from="ControlsOptions/MarginContainer/VBoxContainer/ScrollContainer/GridContainer/Right" to="ControlsOptions" method="_on_English_pressed"]
[connection signal="pressed" from="ControlsOptions/MarginContainer/VBoxContainer/ScrollContainer/GridContainer/Interact" to="ControlsOptions" method="_on_English_pressed"]
[connection signal="pressed" from="ControlsOptions/MarginContainer/VBoxContainer/ScrollContainer/GridContainer/Dash" to="ControlsOptions" method="_on_English_pressed"]
